--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartWardrobe"
+        android:theme="@style/Base.Theme.SmartWardrobe"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.SmartWardrobe"
+            android:theme="@style/Base.Theme.SmartWardrobe"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
